# GhostDrive

./: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: error.rs  types.rs
crates/host/: Cargo.toml
crates/host/src/: daemon.rs  lib.rs
crates/host/tests/: daemon_test.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: db.rs  lib.rs  watcher.rs
crates/indexer/tests/: crud_test.rs  db_test.rs  watch_demo.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs  node.rs
crates/network/tests/: identity_test.rs
crates/transcoder/: Cargo.toml
crates/transcoder/src/: ffmpeg.rs  lib.rs
crates/transcoder/tests/: ffmpeg_test.rs  stream_test.rs
