[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/indexer"
]

[workspace.dependencies]
iroh = "0.95.1"
iroh-blobs = "0.97.0"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.43"
bytes = "1.11.0"
redb = "3.1.0"
bincode = { version = "2.0.1", features = ["serde"] }
notify = "8.2.0"
mime_guess = "2.0.5"
blake3 = "1.8.2"
tracing-subscriber = "0.3.22"