[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/indexer",
    "crates/network",
    "crates/transcoder"
]

[workspace.dependencies]
iroh = "0.95.1"
iroh-blobs = { version = "0.97.0", features = ["fs-store"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
anyhow = "1.0.100"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.43"
bytes = "1.11.0"
redb = "3.1.0"
bincode = { version = "2.0.1", features = ["serde"] }
notify = "8.2.0"
mime_guess = "2.0.5"
blake3 = "1.8.2"
tracing-subscriber = "0.3.22"
hex = "0.4.3"
rand = "0.9.2"
base64 = "0.22.1"
async-stream = "0.3.6"
futures = "0.3.31"
futures-core = "0.3.31"
