[package]
name = "ghostdrive-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
ghostdrive-core = { path = "../core" }
redb = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs", "time", "rt-multi-thread"] }
notify = { workspace = true }
mime_guess = { workspace = true }
blake3 = { workspace = true }
tracing-subscriber = { workspace = true }